# templess

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  build.rs  config.toml  package-lock.json  package.json  tailwind.css
assets/: tailwind.css
src/: app_state.rs  lib.rs  main.rs
src/api/: initialization.rs  mod.rs
src/clingo/: bindings.rs  configuration.rs  control.rs  error.rs  mod.rs  model.rs  solve_handle.rs  solve_result.rs  symbol.rs
src/core/: config.rs  mod.rs
src/core/database/: item_sql.rs  mod.rs  schema.rs
src/core/domain/: class.rs  item.rs  item_bonus.rs  item_slot.rs  item_type.rs  mod.rs  realm.rs  stat.rs  stat_category.rs  template.rs
src/gui/: app.rs  mod.rs  routes.rs
src/gui/components/: error.rs  header.rs  layout.rs  loading.rs  mod.rs  modal.rs  select.rs
src/gui/dashboard/: circle.rs  dashboard_page.rs  inventory.rs  inventory_slot.rs  item_selection_details.rs  item_selection_modal.rs  mod.rs
src/gui/dashboard/attributes/: attribute_overview.rs  attribute_section.rs  mod.rs  stat_data.rs
src/gui/home/: home_page.rs  mod.rs
src/initialization/: item_init.rs  mod.rs  raw_item.rs
src/optimization/: encoding.lp  instance.rs  mod.rs  optimize.rs  worker.rs
