[package]
name = "templess"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
rusqlite = { version = "0.36.0", features = ["bundled"] }
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
strum = {version = "0.27.1", features = ["derive"]}
tokio = {version = "1.45.1", features = ["full"]}
toml = "0.8.22"

[lib]
name = "templess"
path = "src/lib.rs"

[[bin]]
name = "templess"
path = "src/main.rs"

[workspace.metadata]
clippy = { allow = [], warn = ["missing_docs"], deny = [] }