[package]
name = "templess"
version = "0.1.0"
edition = "2024"

[features]
# This feature will automatically clone and build clingo from source
bundle-clingo = []

[dependencies]
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
strum = {version = "0.27.2", features = ["derive"]}
toml = "0.9.11"
dioxus = { version = "0.7.3", features = ["desktop", "router"] }
dioxus-free-icons = { version = "0.10.0", features= ["lucide"] }
bitflags = "2.10.0"

[lib]
name = "templess"
path = "src/lib.rs"

[[bin]]
name = "templess"
path = "src/main.rs"

[workspace.metadata]
clippy = { allow = [], warn = ["missing_docs"], deny = [] }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[build-dependencies]
bindgen = "0.72.1"
cmake = "0.1.57"
